--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "next": "13.3.0",
+    "package-lock.json": "^1.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
